docs/api/qiskit/0.24/index.mdx
---
title: Qiskit SDK API documentation (v0.24)
description: Index of all the modules in qiskit v0.24.
---

<span id="module-qiskit" />

# Qiskit Terra API Reference

*   [Quantum Circuits (`qiskit.circuit`)](circuit)
*   [Compilation Routines (`qiskit.compiler`)](compiler)
*   [Executing Experiments (`qiskit.execute`)](execute)
*   [Visualizations (`qiskit.visualization`)](visualization)
*   [ClassicalFunction compiler (`qiskit.circuit.classicalfunction`)](classicalfunction)
*   [Circuit Converters (`qiskit.converters`)](converters)
*   [Circuit and Schedule Assembler (`qiskit.assembler`)](assembler)
*   [DAG Circuits (`qiskit.dagcircuit`)](dagcircuit)
*   [Quantum Circuit Extensions (`qiskit.extensions`)](extensions)
*   [BasicAer: Python-based Simulators (`qiskit.providers.basicaer`)](providers_basicaer)
*   [Providers Interface (`qiskit.providers`)](providers)
*   [Legacy Provider Interface Base Objects (`qiskit.providers`)](providers#legacy-provider-interface-base-objects-qiskit-providers)
*   [Backend Objects (`qiskit.providers.models`)](providers_models)
*   [Pulse (`qiskit.pulse`)](pulse)
*   [Circuit Scheduler (`qiskit.scheduler`)](scheduler)
*   [Qasm (`qiskit.qasm`)](qasm)
*   [Qobj (`qiskit.qobj`)](qobj)
*   [Quantum Information (`qiskit.quantum_info`)](quantum_info)
*   [Experiment Results (`qiskit.result`)](result)
*   [Qiskit Tools (`qiskit.tools`)](tools)
*   [Jupyter Tools (`qiskit.tools.jupyter`)](tools_jupyter)
*   [Transpiler (`qiskit.transpiler`)](transpiler)
*   [Transpiler Passes (`qiskit.transpiler.passes`)](transpiler_passes)
*   [Preset Passmanagers (`qiskit.transpiler.preset_passmanagers`)](transpiler_preset)
*   [Models and Schemas (`qiskit.validation`)](validation)
*   [Visualizations (`qiskit.visualization`)](visualization)

