docs/api/qiskit/0.25/index.mdx
---
title: qiskit
description: API reference for qiskit
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit
---

<span id="module-qiskit" />

# Qiskit Terra API Reference

*   [Quantum Circuits (`qiskit.circuit`)](circuit)
*   [Compilation Routines (`qiskit.compiler`)](compiler)
*   [Executing Experiments (`qiskit.execute_function`)](execute)
*   [Visualizations (`qiskit.visualization`)](visualization)
*   [ClassicalFunction compiler (`qiskit.circuit.classicalfunction`)](classicalfunction)
*   [Circuit Converters (`qiskit.converters`)](converters)
*   [Circuit and Schedule Assembler (`qiskit.assembler`)](assembler)
*   [DAG Circuits (`qiskit.dagcircuit`)](dagcircuit)
*   [Quantum Circuit Extensions (`qiskit.extensions`)](extensions)
*   [BasicAer: Python-based Simulators (`qiskit.providers.basicaer`)](providers_basicaer)
*   [Providers Interface (`qiskit.providers`)](providers)
*   [Writing a New Provider](providers#writing-a-new-provider)
*   [Legacy Provider Interface Base Objects (`qiskit.providers`)](providers#legacy-provider-interface-base-objects-qiskit-providers)
*   [Backend Objects (`qiskit.providers.models`)](providers_models)
*   [Pulse (`qiskit.pulse`)](pulse)
*   [Circuit Scheduler (`qiskit.scheduler`)](scheduler)
*   [Qasm (`qiskit.qasm`)](qasm)
*   [Qobj (`qiskit.qobj`)](qobj)
*   [Quantum Information (`qiskit.quantum_info`)](quantum_info)
*   [Experiment Results (`qiskit.result`)](result)
*   [Qiskit Tools (`qiskit.tools`)](tools)
*   [Jupyter Tools (`qiskit.tools.jupyter`)](tools_jupyter)
*   [Transpiler (`qiskit.transpiler`)](transpiler)
*   [Transpiler Passes (`qiskit.transpiler.passes`)](transpiler_passes)
*   [Preset Passmanagers (`qiskit.transpiler.preset_passmanagers`)](transpiler_preset)
*   [Utilities (`qiskit.utils`)](utils)
*   [Models and Schemas (`qiskit.validation`)](validation)
*   [Visualizations (`qiskit.visualization`)](visualization)
*   [Operators (`qiskit.opflow`)](opflow)
*   [Operator Base Class](opflow#operator-base-class)
*   [Operator Globals](opflow#operator-globals)
*   [Submodules](opflow#submodules)
*   [Utility functions](opflow#utility-functions)
*   [Exceptions](opflow#exceptions)
*   [Algorithms (`qiskit.algorithms`)](algorithms)
*   [Algorithms](algorithms#algorithms)
*   [Exceptions](algorithms#exceptions)

